# scene_rdl2_pybind11

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  setup.py  test_bindings.py
example/: example.py  scene.exr  scene.rdla
include/: scene_rdl2.h  scene_rdl2_pybind11.h
scene_rdl2_pybind11/: test_bindings.py
scene_rdl2_pybind11/src/: module.cpp
src/: bind_attribute.cpp  bind_io.cpp  bind_layer.cpp  bind_light.cpp  bind_math.cpp  bind_node.cpp  bind_render_output.cpp  bind_scene_context.cpp  bind_scene_object.cpp  bind_scene_variables.cpp  bind_sets.cpp  bind_shaders.cpp  bind_types.cpp  bindings.h  module.cpp
tests/: helpers.py  test_casting.py  test_collections.py  test_enums.py  test_io.py  test_math.py  test_objects.py  test_scene.py  test_scene_rdl2.py  test_userdata.py
